# ZephyrRTOS

./: .gitignore  README.md  SystemView.odt  Zephyr_documentation.docx  env.cmd  zephyr.code-workspace
My Project/My Project/: Debug.xml  My Project.componentinfo.xml  My Project.cproj  RTT  Release.xml  SEGGER_SYSVIEW_Conf.g.h  SystemView  SystemView.json  atmel_start_pins.h  calendar.c  calendar.h  driver_init.c  driver_init.h  generate_sysview_os_file.py  i2c.c  i2c.h  lum_sensor.c  lum_sensor.h  main.c  measures_logger  measures_logger.c  measures_logger.h  printf.c  printf.h  sd_card_driver.c  sx126x.c  sx126x.h  temp_hum_sensor.c  temp_hum_sensor.h  tools.c  tools.h
My Project/My Project/.atmelstart/: AtmelStart.gpdsc  atmel_start_config.atstart
My Project/My Project/Config/: hpl_gclk_config.h  hpl_sercom_config.h  hpl_sysctrl_config.h  hpl_tc_config.h  peripheral_clk_config.h
My Project/My Project/sd_card_driver/: app_common.c  app_common.h  configuration.h  definitions.h  device.h  initialization.c  toolchain_specifics.h
My Project/My Project/sd_card_driver/driver/sdspi/: drv_sdspi.h  drv_sdspi_definitions.h
My Project/My Project/sd_card_driver/driver/sdspi/src/: drv_sdspi.c  drv_sdspi_local.h  drv_sdspi_plib_interface.c
My Project/My Project/sd_card_driver/osal/: osal_impl_basic.h
My Project/My Project/sd_card_driver/peripheral/clock/: plib_clock.c
My Project/My Project/sd_card_driver/peripheral/nvic/: plib_nvic.c
My Project/My Project/sd_card_driver/peripheral/sercom/spi_master/: plib_sercom4_spi_master.c  plib_sercom4_spi_master.h  plib_sercom_spi_master_common.h
My Project/My Project/sd_card_driver/peripheral/tc/: plib_tc3.c
My Project/My Project/sd_card_driver/system/fs/src/: sys_fs.c
My Project/My Project/sd_card_driver/system/int/src/: sys_int.c
My Project/My Project/sd_card_driver/system/ports/: sys_ports.h
My Project/My Project/sd_card_driver/system/time/src/: sys_time_local.h
My Project/My Project/work_queue/: SysView_wq.json  work_queue.c  work_queue.h
adc/: prj.conf
boards/atmel/NxG_Court/: Kconfig.nxg_court  nxg_court.dts  nxg_court.dtsi  pre_dt_board.cmake
common/RTT/Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
common/SystemView/: README.md  SYSVIEW_Config.h  SystemView.json  generate_sysview_file.py  sysview.c  sysview.h  timestamp.c  timestamp.h
common/SystemView/Config/: SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h
common/SystemView/SEGGER/: SEGGER_RTT_printf.c  SEGGER_SYSVIEW.c  SEGGER_SYSVIEW_ConfDefaults.h  SEGGER_SYSVIEW_Config_NoOS_CM0.c  SEGGER_SYSVIEW_NoOS_CM0.c
common/SystemView/SEGGER/Syscalls/: SEGGER_RTT_Syscalls_GCC.c
common/SystemView/SYSVIEW/: SEGGER_SYSVIEW_Config_NoOS_CM0.c
common/measures_logger/: measures_logger.c  measures_logger.h
custom_board/boards/: ek_ra2l1.overlay
i2c/: prj.conf
i2c/boards/: samd21_xpro.overlay
i2c/src/: main.c
led_nxg_court/: CMakeLists.txt  prj.conf
led_nxg_court/src/: main.c
zephyr/: env.cmd  env.sh  patch_init_spi_sam0.cmd  zephyr.code-workspace
zephyr/adc/: CMakeLists.txt
zephyr/adc/boards/: samd21_xpro.overlay
zephyr/boards/atmel/NxG_Court/: CMakeLists.txt  board.cmake  board.yml  nxg_court.dts  nxg_court.yaml  nxg_court_defconfig
zephyr/boards/atmel/NxG_Long/: Kconfig.nxg_long  board.cmake  board.yml  init_board.c  nxg_long.dts  nxg_long.dtsi  nxg_long.yaml  nxg_long_defconfig
zephyr/custom_board/: CMakeLists.txt  prj.conf
zephyr/custom_board/boards/: ek_ra2l1.overlay
zephyr/custom_board/src/: main.c
zephyr/fuota/: prj.conf  sysbuild.conf
zephyr/fuota/boards/: nxg_long.conf
zephyr/fuota/src/: main.c
zephyr/fuota/sysbuild/: mcuboot.conf
zephyr/i2c/: CMakeLists.txt
zephyr/led_thread/: CMakeLists.txt
zephyr/led_thread/boards/: samd21_xpro.overlay
zephyr/led_thread/src/: main.c
zephyr/renesas_sd_card/: CMakeLists.txt  prj_debug.conf
zephyr/renesas_sd_card/boards/: ek_ra2l1.overlay
zephyr/renesas_sd_card/src/: lum_sensor.c  lum_sensor.h  main.c  sd_card.c  sd_card.h  temp_hum_sensor.h
zephyr/zephyr_nxg_court/: CMakeLists.txt  prj.conf  prj_debug.conf  prj_release.conf
zephyr/zephyr_nxg_court/boards/: ek_ra2l1.overlay  nxg_court_debug.overlay
zephyr/zephyr_nxg_court/src/: lora.c  lora.h  lum_sensor.c  lum_sensor.h  main.c  measures_logger.c  measures_logger.h  sd_card.c  sd_card.h  spi.c  spi.h  temp_hum_sensor.c
zephyr_nxg_court/: CMakeLists.txt  prj.conf
zephyr_nxg_court/src/: lum_sensor.h  main.c  sd_card.c  sd_card.h  temp_hum_sensor.c  temp_hum_sensor.h
